[tool.poetry]
name = "harvest-invoice"
version = "0.1.0"
description = ""
authors = ["BrandonDedolph <brandonjdedolph@gmail.com>"]
readme = "README.md"
packages = [{include = "harvest_invoice"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
